change extension for compatibility with vivado

--- a/vhdl/tests/1reg/Makefile
+++ b/vhdl/tests/1reg/Makefile
@@ -27,9 +27,9 @@ init: force
 	# /usr/local/lib/ghdl/ieee/v08/../../src/ieee2008/std_logic_1164-body.vhdl
 	# /usr/local/lib/ghdl/ieee/v08/../../src/ieee2008/numeric_std.vhdl
 	# /usr/local/lib/ghdl/ieee/v08/../../src/ieee2008/numeric_std-body.vhdl
-	$(GHDL) -a $(GHDLFLAGS) ../common/regpkg.vhdl
-	$(GHDL) -a $(GHDLFLAGS) reg-test.vhdl
-	$(GHDL) -a $(GHDLFLAGS) ../common/my-bus2.vhdl
-	$(GHDL) -a $(GHDLFLAGS) ../common/my-register.vhdl
+	$(GHDL) -a $(GHDLFLAGS) ../common/regpkg.vhd
+	$(GHDL) -a $(GHDLFLAGS) reg-test.vhd
+	$(GHDL) -a $(GHDLFLAGS) ../common/my-bus2.vhd
+	$(GHDL) -a $(GHDLFLAGS) ../common/my-register.vhd
 
 force:
